--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,42 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+input{
+  color: rgb(4, 4, 4);
+  background-color: rgb(205, 205, 205);
+  height: 38px;
+  width: 300px;
+  outline: none;
+  border-radius: 5px ;
+  border: none;
+  position: relative;
+  top: 3px;
+  right: 5px;
+}
+.formtask{
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+}
+div.task-list{
+  background-color: cornflowerblue;
+  height: 600px;
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  
+}
+div.task-list-item{
+  height: 35px;
+  width : 800px;
+  background-color:rgb(250, 197, 227);
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  top: 10px;
+  position: relative;
+  bottom: 3px;
+}
